import Clasificador from "./clasificador";

export default class Categoria extends Clasificador{
    constructor(nombre: string){
        super(nombre);
    }
}