import Clasificador from "./clasificador";

export default class Etiqueta extends Clasificador{
    constructor(nombre: string){
        super(nombre);
    }
}