import { Moment } from "moment";
import Tarea from "./tarea";

export default class GestorDeEstadistica{
    private tareas: Array<Tarea>=[];

    public obtenerTiempoPromedioDeFinalizacion(): number | undefined {
        return undefined
    }        
}