@startuml ToDoList

title TP - TODO List - Grupo 9
skinparam lineType ortho

class Tarea{
   - id: number
   - titulo: string
   - descripcion: string
   - fechaCreacion: Moment
   - fechaVencimiento: Moment
   - prioridad: Prioridad
   - avance: Avance
   - estados: Map<Estado,Moment>
   - estadoActual: Estado
   - categoria: Categoria | undefined
   - etiquetas: Etiqueta[]
    
    + setTitulo(): void
    + getTitulo(): number
    + setTitulo(titulo: string): void
    + getTitulo(): string
    + setDescripcion(desc: string): void
    + getDescripcion(): string
    + getFechaCreacion(): Date
    + setFechaVencimiento(fecha: Date): void
    + getFechaVencimiento(): Date
    + setPrioridad(prioridad: Prioridad): void
    + getPrioridad(): Prioridad
    + setAvance(avance: Avance): void
    + getAvance(): Avance
    + setEstado(estado: Estado): void
    + getEstadoActual(): Estado
    + getEstados(): Map<Estado,Moment>
    + setCategoria(categoria: Categoria): void
    + getCategoria(): Categoria | undefined
    + setEtiqueta(etiqueta: Etiqueta): void
    + getEtiquetas(): Etiqueta[]
}

class CreadorDeTarea{
    + instanciarTarea(): Tarea
}

class GestorDeTarea{
    - tareas: Array<Tarea>
    - categorias: Array<Categoria>
    - etiquetas: Array<Etiqueta>
    - creadorDeTareas: CreadorDeTarea
    - creadorDeClasificador: CreadorDeClasificador

    + agregarTarea(): void
    + agregarCategoria(): void
    + agregarEtiqueta(): void
    + eliminarTarea(id: number): void
}

class BuscadorDeTarea{
    - tareas: Array<Tarea>

    + getTareaPorTitulo(titulo: string): Tarea | undefined
    + getTareasCompletadas(): Tarea[]
    + getTareasNoCompletadas(): Tarea[]
    + getTareasPendientes(): Tarea[]
}

class OrganizadorDeTarea{
    - tareas: Array<Tarea>

    + ordenarTareasPorPrioridad(): Tarea[]
    + ordenarTareasPorFecha(): Tarea[]
}

class GestorDeEstadisticas{
    - tareas: Array<Tarea>
    - buscadorDeTarea: BuscadorDeTarea

    + obtenerTiempoDeFinalizacionDeUnaTarea(tarea: Tarea): number
    + obtenerTiempoDedicadoPorTarea(): Map<number, number>
    + obtenerTiempoDeFinalizacionDeTareas(): number
    + obtenerTiempoPromedioDeFinalizacion(): number
    + obtenercantidadDeTareasPorEstado(): Map<Estado, number>
}

class GestorDeNotificaciones{
    + notificarRecordatorio()
}

abstract class Clasificador{
    - nombre: string

    + setNombre(nombre: string): void
    + getNombre(): string
}

class Categoria extends Clasificador{}
class Etiqueta extends Clasificador{}

class CreadorDeClasificador{
    + instanciarCategoria(): Categoria
    + instanciarEtiqueta(): Etiqueta
}

ENUM Estado{
    Pendiente
    EnProgreso
    Completado
}

ENUM Avance{
    0
    25
    50
    75
    100
}

ENUM Prioridad{
    Alta
    Media
    Baja
}

GestorDeEstadisticas ..> Tarea
GestorDeEstadisticas ..> BuscadorDeTarea
GestorDeTarea *-right- Tarea
Etiqueta --o GestorDeTarea
Categoria --o GestorDeTarea
CreadorDeTarea *-left- Tarea
BuscadorDeTarea *-left- Tarea
OrganizadorDeTarea *-- Tarea

/' CreadorDeClasificador *-- Etiqueta
CreadorDeClasificador *-- Categoria '/

Tarea o-- Prioridad
Tarea o-- Estado
Tarea o-- Avance

@enduml